{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 81,
  "lineage": "9b425d9b-b1e6-e3f8-fcb0-42607f4eaa97",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg-access-itera-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:security-group/sg-02ed653802612fe6d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ed653802612fe6d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "214952093188",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion - permitido todo el tráfico"
            },
            "tags_all": {
              "Name": "Bastion - permitido todo el tráfico"
            },
            "vpc_id": "vpc-08d3a0e6b8ed1ca04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a749d160bf052e89",
            "arn": "arn:aws:ec2:us-east-1:214952093188:instance/i-0c6cd3a0faf6103c4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6cd3a0faf6103c4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-mga",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f019be620f0b2793",
            "private_dns": "ip-10-10-1-172.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.172",
            "public_ip": "3.90.151.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e9d1239f048fc48a",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a501a03c1630fbc",
            "tags": {
              "Name": "WEB Server"
            },
            "tags_all": {
              "Name": "WEB Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ed653802612fe6d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.sg-access-itera-vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a749d160bf052e89",
            "arn": "arn:aws:ec2:us-east-1:214952093188:instance/i-099afaea931f9f888",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099afaea931f9f888",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-mga",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bebf7fe66da432d3",
            "private_dns": "ip-10-10-1-31.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.31",
            "public_ip": "3.81.184.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ec3ab7f980593c4",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a501a03c1630fbc",
            "tags": {
              "Name": "APP Server"
            },
            "tags_all": {
              "Name": "APP Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ed653802612fe6d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.sg-access-itera-vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a749d160bf052e89",
            "arn": "arn:aws:ec2:us-east-1:214952093188:instance/i-00a2d8c301953d257",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a2d8c301953d257",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "test-mga",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0876de9e0fb7bfce9",
            "private_dns": "ip-10-10-1-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.81",
            "public_ip": "23.23.26.8",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ad1ae862aaaa95c7",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a501a03c1630fbc",
            "tags": {
              "Name": "BD Server"
            },
            "tags_all": {
              "Name": "BD Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02ed653802612fe6d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.sg-access-itera-vpc",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:internet-gateway/igw-0a49e5ae0477d9c04",
            "id": "igw-0a49e5ae0477d9c04",
            "owner_id": "214952093188",
            "tags": {
              "Name": "igw vpc virginia"
            },
            "tags_all": {
              "Name": "igw vpc virginia"
            },
            "vpc_id": "vpc-08d3a0e6b8ed1ca04"
          },
          "dependencies": [
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:route-table/rtb-07819778f2a8eb8ef",
            "id": "rtb-07819778f2a8eb8ef",
            "owner_id": "214952093188",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a49e5ae0477d9c04",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d3a0e6b8ed1ca04"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f499ee23970f4694",
            "route_table_id": "rtb-07819778f2a8eb8ef",
            "subnet_id": "subnet-02a501a03c1630fbc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table_principal",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:subnet/subnet-0ef30c84100d64f27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef30c84100d64f27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Fecha Creacion": "12/01/2024",
              "Name": "vPC_Easts_01_subnet_private_01"
            },
            "tags_all": {
              "Fecha Creacion": "12/01/2024",
              "Name": "vPC_Easts_01_subnet_private_01"
            },
            "vpc_id": "vpc-08d3a0e6b8ed1ca04"
          },
          "dependencies": [
            "aws_default_security_group.sg-access-itera-vpc",
            "aws_instance.public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:subnet/subnet-02a501a03c1630fbc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a501a03c1630fbc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "214952093188",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Fecha Creacion": "12/01/2024",
              "Name": "vPC_Easts_01_subnet_public_01"
            },
            "tags_all": {
              "Fecha Creacion": "12/01/2024",
              "Name": "vPC_Easts_01_subnet_public_01"
            },
            "vpc_id": "vpc-08d3a0e6b8ed1ca04"
          },
          "dependencies": [
            "aws_vpc.vpc_ueast_1_QA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_ueast_1_QA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:214952093188:vpc/vpc-08d3a0e6b8ed1ca04",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b5241470f494c22c",
            "default_route_table_id": "rtb-08eb374594645f9f8",
            "default_security_group_id": "sg-02ed653802612fe6d",
            "dhcp_options_id": "dopt-f9f8c782",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08d3a0e6b8ed1ca04",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eb374594645f9f8",
            "owner_id": "214952093188",
            "tags": {
              "Fecha Creacion": "12/01/2024",
              "Name": "VPC_Easts_01"
            },
            "tags_all": {
              "Ambiente": "QA",
              "Fecha Creacion": "12/01/2024",
              "IAC": "Terraform",
              "Name": "VPC_Easts_01",
              "Nube": "AWS",
              "Responsable": "MGA"
            }
          }
        }
      ]
    }
  ]
}